Working on getting files for animal